--- a/scss/themes/variables/_light_variables.scss
+++ b/scss/themes/variables/_light_variables.scss
@@ -28,11 +28,10 @@ $pink-color: #da1677;
 $green-color: #036603;
 $primary: #e26f2e;
 
-// YIQ contrast settings
-$yiq-contrasted-threshold: 150;
-$yiq-text-light: $white;
-$yiq-text-dark: $black;
-$component-active-color: $yiq-text-dark;
+// Bootstrap 5 contrast colors
+$light-color: $black;
+$dark-color: $gray-base;
+$component-active-color: $light-color;
 
 $link-color: $gray-800;
 $link-hover-color: $black;
